2012-12-27  Glenn Morris  <rgm@gnu.org>

	* cygw32.c (Fcygwin_convert_file_name_to_windows)
	(Fcygwin_convert_file_name_from_windows): Doc fixes.

2012-12-24  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (file_name_as_directory, directory_file_name): Accept
	an additional argument MULTIBYTE to indicate whether the input C
	came from a multibyte or a unibyte Lisp string; all callers
	adjusted.  Don't assume the input string is always multibyte.
	(Bug#13262)
	(Ffile_name_directory) [DOS_NT]: Handle unibyte strings correctly:
	don't ENCODE_FILE them, and return a unibyte string if the input
	was unibyte.
	(Fexpand_file_name): Don't mix unibyte with multibyte strings, and
	don't assume the input strings will always be multibyte.  If the
	input strings are multibyte, decode strings obtained from C
	library functions.

2012-12-22  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fselect_window): Reword doc-string (Bug#13248).

2012-12-21  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Finsert_file_contents): Doc fix.

	* w32proc.c (new_child, delete_child, find_child_pid): For a
	subprocess, consider its slot being in use as long as its process
	handle (procinfo.hProcess) is not NULL.  This avoids reusing the
	slot when a new process is started immediately after killing
	another one, without waiting enough time for the first process to
	be reaped and resources allocated for it be orderly freed.
	(Bug#13086)
	Suggested by Fabrice Popineau <fabrice.popineau@supelec.fr>.

2012-12-21  Chong Yidong  <cyd@gnu.org>

	* buffer.c (Fset_buffer_major_mode): Doc fix (Bug#13231).

2012-12-15  Chong Yidong  <cyd@gnu.org>

	* fns.c (Fcompare_strings): Doc fix (Bug#13081).

2012-12-14  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (get_name_and_id): Always pass NULL as the first argument
	of lookup_account_sid.  Avoids crashes with UNC file names that
	refer to DFS domains, not to specific machine names.  (Bug#12621)
	Remove now unused argument FNAME; all callers changed.