@@ -1,3 +1,9 @@
+2012-12-27  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (set_cursor_from_row): Don't confuse a truncation or
+	continuation glyph on a TTY with an indication of an empty line.
+	(Bug#13277)
+
 2012-12-27  Glenn Morris  <rgm@gnu.org>
 
 	* cygw32.c (Fcygwin_convert_file_name_to_windows)
